# ocaml-collections

./: .gitignore  Makefile  Makefile.config  collections.opam  dune-project  shell.nix
lib/: dune  hashTable.ml  hashTable.mli  list.ml  list.mli  map.ml  map.mli  set.ml  set.mli  unionFind.ml  unionFind.mli  vec.mli
src/: collections.mli  graph.ml  graph.mli  hashTable.ml  map.ml  map.mli
