opam-version: "2.0"
name: "collections"
version: "0.1"
synopsis: "Enhanced immutable collections"
description: """
Longer description
"""
maintainer: "Timothée Haudebourg <timothee.haudebourg@irisa.fr>"
authors: "Timothée Haudebourg <timothee.haudebourg@irisa.fr>"
license: ""
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [ "ocaml" "dune" ]
build: [
  ["dune build @install"]
]
install: [make "install"]
