opam-version: "2.0"
synopsis: "Enhanced immutable collections."
description:
  "Collections with functional interface, and more functions for the standard collections."
maintainer: ["Timothée Haudebourg <timothee.haudebourg@irisa.fr>"]
authors: ["Timothée Haudebourg <timothee.haudebourg@irisa.fr>"]
homepage: "inria.gitlab.fr"
doc: "inria.gitlab.fr"
bug-reports: "inria.gitlab.fr"
depends: []
build: [
  [
    "make"
    "-j"
    jobs
  ]
]
dev-repo: "inria.gitlab.fr"
