(lang dune 1.11)
(package
  (name collections)
  (synopsis "Enhanced immutable collections.")
  (description "Collections with functional interface, and more functions for the standard collections.")
)
(authors "Timothée Haudebourg <timothee.haudebourg@irisa.fr>")
(maintainers "Timothée Haudebourg <timothee.haudebourg@irisa.fr>")
(source (uri inria.gitlab.fr))
(bug_reports inria.gitlab.fr)
(homepage inria.gitlab.fr)
(documentation inria.gitlab.fr)
(generate_opam_files true)
